src/test/deca/codegen/valid/printUnaryMinusInt.deca
// Description :
//   test d'impritation d'une unary minus

// Résultats :
//   -1
//   
{
	int x = 1;
	print(-x);
}