src/test/deca/codegen/invalid/valiable_non_initial.deca
// Description :
//   test d'acceder a une variable non initialise

// Résultats :
//   IMA leve une erreur
{
	int x;
	print(x);
}